...
        header={<TabTopBar routeName="barcode" />}
        onRefresh={() => {
          void refetch()
        }}
        refreshing={isRefetching}
        scrollable
        testID="barcode-screen"
      >
        {isForcedQueryError || (isError && !barcodeScreenState) ? (
          <QueryErrorState
            description={t('tabScreens.barcode.errors.description')}
            onRetry={() => {
              if (isForcedQueryError) {
...
