...
        px: '$0',
        pb: '$4',
        pt: '$3',
      }}
      footer={footerContent}
      scrollable
      testID="onboarding-screen"
    >
      <YStack gap="$4" px="$4">
        <Text
          color="$color10"
          fontSize={13}
          fontWeight="800"
...
              stretchToFill={false}
              width={pageWidth}
            />
          )}
          scrollEventThrottle={16}
          showsHorizontalScrollIndicator={false}
          testID="onboarding-list"
        />
      </YStack>
    </ScreenContainer>
  )
}

